# dzencode-ws-be

./: .env.sample  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  gunicorn.conf.py  pyproject.toml
comments/: admin.py  consumers.py  enums.py  errors.py  models.py  mutation.py  query.py  routing.py  serializers.py  subscription.py  types.py
comments/migrations/: 0001_initial.py
comments/tests/: factories.py  test_create_comments.py  test_ws_comments_connect.py  test_ws_comments_create.py  test_ws_comments_retrieve.py
core/: asgi.py  errors.py  exceptions.py  graphql.py  logging.py  middlewares.py  settings.py  testrunner.py  urls.py  workers.py
core/tests/: test_jwt_middleware.py
