[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Stanislav Buldyhin <faquedust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.1.0"
django-rest-framework = "^0.1.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.12.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py312']
line-length = 120
skip-string-normalization = true
exclude = '''
(
    \.venv
    | .+/migrations
)
'''