[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Stanislav Buldyhin <faquedust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
channels = { extras = ["daphne"], version = "^4.0.0" }
channels-redis = "^4.1.0"
django-rest-framework = "^0.1.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.12.0"
factory-boy = "^3.3.0"
coverage = "^7.3.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py312']
line-length = 120
exclude = '''
(
    \.venv
    | .+/migrations
)
'''

[tool.coverage.report]
exclude_also = ["CHANNEL_LAYERS"]
omit = ["manage.py", "core/testrunner.py"]

[tool.isort]
profile = "black"
force_single_line = true
order_by_type = false
line_length = 120
skip = '.venv,migrations'
